--- a/source/sass/_scaffolding.scss
+++ b/source/sass/_scaffolding.scss
@@ -54,15 +54,24 @@ input[type="radio"].visually-hidden {
 
 .container {
   margin: 0 auto;
-  max-width: $desktop-width-container;
+  max-width: $desktop-width;
   padding: 0 40px;
 }
 
-@media (max-width: $desktop-width) {
+@media (max-width: $laptop-width) {
   .container {
-    max-width: $tablet-width-container;
+    width: auto;
+    margin: 0;
+    padding: 0 27px;
   }
 }
+
+@media (max-width: $tablet-width) {
+  .container {
+    padding: 0 15px;
+  }
+}
+
 
 // @media (max-width: $laptop-width) {
 //   .container {
@@ -70,8 +79,8 @@ input[type="radio"].visually-hidden {
 //   }
 // }
 
-@media (max-width: $tablet-width) {
-  .container {
-    max-width: $mobile-width-container;
-  }
-}
+// @media (max-width: $tablet-width) {
+//   .container {
+//     max-width: $mobile-width-container;
+//   }
+// }
