--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -15,16 +15,17 @@ $main-color-text: #ffffff;
 $main-color-background: #151313;
 
 //Template containers
-$mobile-width-container: 540px;
-$tablet-width-container: 790px;
+// $mobile-width-container: 540px;
+// $tablet-width-container: 790px;
 // $laptop-width-container: 1100px;
 $desktop-width-container: 1286px;
 
 //Template breakpoints
 $mobile-width: 320px;
-$tablet-width: 768px;
-// $laptop-width: 1100px;
-$desktop-width: 1366px;
+$tablet-width: 767px;
+$laptop-width: 1023px;
+$intermediate-width: 1170px;
+$desktop-width: 1286px;
 
 //Template retina media
 $retina-dpi: 144dpi;
