--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -45,3 +45,57 @@
 		object-position: center;
 	}
 }
+
+@media (max-width: $tablet-width) {
+  .gallery {
+    width: 100%;
+    height: 100%;
+    transform: translateX(0);
+    margin-bottom: 42px;
+    overflow: visible;
+    &__wrapper {
+      align-items: center;
+      width: 100%;
+      height: 248px;
+    }
+    &__item {
+      width: 100%;
+      overflow: hidden;
+    }
+    &__item-img {
+      object-fit: contain;
+    }
+  }
+}
+
+@media (max-width: $laptop-width) {
+  .gallery {
+    display: flex;
+    height: 495px;
+    column-count: 1;
+    column-gap: 0;
+    margin-bottom: 56px;
+    padding-left: 0;
+    &__wrapper {
+      align-items: center;
+      height: 495px;
+      position: relative;
+    }
+    &__item {
+      flex-shrink: 0;
+      position: relative;
+      display: block;
+      width: 474px;
+      height: auto;
+      max-height: 1000px;
+      transition: height 0.3s ease-out, margin-top 0.3s ease-out;
+      &--top {
+        margin-bottom: 0;
+        background-color: #0e0d10;
+      }
+      &--bottom {
+        background-color: #111116;
+      }
+    }
+  }
+}
